--- a/game/ui/prototype_m.html
+++ b/game/ui/prototype_m.html
@@ -7,8 +7,8 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>UI Prototype</title>
 
-    <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/common.css" rel="stylesheet">
     <link href="css/prototype_m.css" rel="stylesheet">
   </head>
   <body>
